--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -1,6 +1,19 @@
 <ion-header>
-  <ion-navbar style="display: flex !important; width: 100%;">
-    <ion-title>{{ "PRODUCTS" | translate }}</ion-title>
+  <ion-navbar>
+    <ion-row style="display: flex; align-items: center;">
+      <ion-col col-5>
+        <ion-title>{{ "PRODUCTS" | translate }}</ion-title>
+      </ion-col>
+      <ion-col></ion-col>
+      <ion-col col-2>
+        <img
+          src="https://cdn6.aptoide.com/imgs/d/e/8/de829fcf2477b3c7001d7a64ca9a8924_icon.png?w=256"
+          alt=""
+          height="30"
+          width="30"
+        />
+      </ion-col>
+    </ion-row>
 
     <!-- <ion-title>{{ "LIST_MASTER_TITLE" | translate }}</ion-title> -->
 
@@ -15,128 +28,134 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content style="background-color: #00baff; ">
-  <ion-list>
-    <ion-card>
-      <ion-item>
-        <ion-row class="item-line">
-          <ion-col col-3>
-            <ion-avatar item-start>
-              <img
-                src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
-              />
-            </ion-avatar>
-          </ion-col>
-          <ion-col col-6>
-            <h2>
-              Alameda Santos, <br />
-              1340
-            </h2></ion-col
-          >
-          <ion-col col-3>
-            <p style="font-weight: bold;">R$ 7,98</p>
-            <small>Recompensa</small>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-    </ion-card>
+<ion-content>
+  <ion-item>
+    <h2 style="margin-left: 10px; color: orange;">Lista de Entregas</h2>
+  </ion-item>
+  <ion-item class="list" style="background-color: #00BAFF;">
+    <ion-list>
+      <ion-card>
+        <ion-item>
+          <ion-row class="item-line">
+            <ion-col col-3>
+              <ion-avatar item-start>
+                <img
+                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
+                />
+              </ion-avatar>
+            </ion-col>
+            <ion-col col-6>
+              <h2>
+                Alameda Santos, <br />
+                1340
+              </h2></ion-col
+            >
+            <ion-col col-3>
+              <p style="font-weight: bold;">R$ 7,98</p>
+              <small>Recompensa</small>
+            </ion-col>
+          </ion-row>
+        </ion-item>
+      </ion-card>
 
-    <ion-card>
-      <ion-item>
-        <ion-row class="item-line">
-          <ion-col col-3>
-            <ion-avatar item-start>
-              <img
-                src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
-              />
-            </ion-avatar>
-          </ion-col>
-          <ion-col col-6>
-            <h2>
-              Alameda Santos, <br />
-              1340
-            </h2></ion-col
-          >
-          <ion-col col-3>
-            <p style="font-weight: bold;">R$ 7,98</p>
-            <small>Recompensa</small>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-    </ion-card>
+      <ion-card>
+        <ion-item>
+          <ion-row class="item-line">
+            <ion-col col-3>
+              <ion-avatar item-start>
+                <img
+                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
+                />
+              </ion-avatar>
+            </ion-col>
+            <ion-col col-6>
+              <h2>
+                Alameda Santos, <br />
+                1340
+              </h2></ion-col
+            >
+            <ion-col col-3>
+              <p style="font-weight: bold;">R$ 7,98</p>
+              <small>Recompensa</small>
+            </ion-col>
+          </ion-row>
+        </ion-item>
+      </ion-card>
 
-    <ion-card>
-      <ion-item>
-        <ion-row class="item-line">
-          <ion-col col-3>
-            <ion-avatar item-start>
-              <img
-                src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
-              />
-            </ion-avatar>
-          </ion-col>
-          <ion-col col-6>
-            <h2>
-              Alameda Santos, <br />
-              1340
-            </h2></ion-col
-          >
-          <ion-col col-3>
-            <p style="font-weight: bold;">R$ 7,98</p>
-            <small>Recompensa</small>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-    </ion-card>
+      <ion-card>
+        <ion-item>
+          <ion-row class="item-line">
+            <ion-col col-3>
+              <ion-avatar item-start>
+                <img
+                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
+                />
+              </ion-avatar>
+            </ion-col>
+            <ion-col col-6>
+              <h2>
+                Alameda Santos, <br />
+                1340
+              </h2></ion-col
+            >
+            <ion-col col-3>
+              <p style="font-weight: bold;">R$ 7,98</p>
+              <small>Recompensa</small>
+            </ion-col>
+          </ion-row>
+        </ion-item>
+      </ion-card>
 
-    <ion-card>
-      <ion-item>
-        <ion-row class="item-line">
-          <ion-col col-3>
-            <ion-avatar item-start>
-              <img
-                src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
-              />
-            </ion-avatar>
-          </ion-col>
-          <ion-col col-6>
-            <h2>
-              Alameda Santos, <br />
-              1340
-            </h2></ion-col
-          >
-          <ion-col col-3>
-            <p style="font-weight: bold;">R$ 7,98</p>
-            <small>Recompensa</small>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-    </ion-card>
+      <ion-card>
+        <ion-item>
+          <ion-row class="item-line">
+            <ion-col col-3>
+              <ion-avatar item-start>
+                <img
+                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
+                />
+              </ion-avatar>
+            </ion-col>
+            <ion-col col-6>
+              <h2>
+                Alameda Santos, <br />
+                1340
+              </h2></ion-col
+            >
+            <ion-col col-3>
+              <p style="font-weight: bold;">R$ 7,98</p>
+              <small>Recompensa</small>
+            </ion-col>
+          </ion-row>
+        </ion-item>
+      </ion-card>
 
-    <ion-card>
-      <ion-item>
-        <ion-row class="item-line">
-          <ion-col col-3>
-            <ion-avatar item-start>
-              <img
-                src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
-              />
-            </ion-avatar>
-          </ion-col>
-          <ion-col col-6>
-            <h2>
-              Alameda Santos, <br />
-              1340
-            </h2></ion-col
-          >
-          <ion-col col-3>
-            <p style="font-weight: bold;">R$ 7,98</p>
-            <small>Recompensa</small>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-    </ion-card>
-  </ion-list>
+      <ion-card>
+        <ion-item>
+          <ion-row class="item-line">
+            <ion-col col-3>
+              <ion-avatar item-start>
+                <img
+                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
+                />
+              </ion-avatar>
+            </ion-col>
+            <ion-col col-6>
+              <h2>
+                Alameda Santos, <br />
+                1340
+              </h2></ion-col
+            >
+            <ion-col col-3>
+              <p style="font-weight: bold;">R$ 7,98</p>
+              <small>Recompensa</small>
+            </ion-col>
+          </ion-row>
+        </ion-item>
+      </ion-card>
+    </ion-list>
+  </ion-item>
+
   <!--
     <ion-row>
       <ion-col [size]="2">
