insert google maps + maker

--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -51,103 +51,7 @@
               </h2></ion-col
             >
             <ion-col col-3>
-              <p style="font-weight: bold;">R$ 7,98</p>
-              <small>Recompensa</small>
-            </ion-col>
-          </ion-row>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-row class="item-line">
-            <ion-col col-3>
-              <ion-avatar item-start>
-                <img
-                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
-                />
-              </ion-avatar>
-            </ion-col>
-            <ion-col col-6>
-              <h2>
-                Alameda Santos, <br />
-                1340
-              </h2></ion-col
-            >
-            <ion-col col-3>
-              <p style="font-weight: bold;">R$ 7,98</p>
-              <small>Recompensa</small>
-            </ion-col>
-          </ion-row>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-row class="item-line">
-            <ion-col col-3>
-              <ion-avatar item-start>
-                <img
-                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
-                />
-              </ion-avatar>
-            </ion-col>
-            <ion-col col-6>
-              <h2>
-                Alameda Santos, <br />
-                1340
-              </h2></ion-col
-            >
-            <ion-col col-3>
-              <p style="font-weight: bold;">R$ 7,98</p>
-              <small>Recompensa</small>
-            </ion-col>
-          </ion-row>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-row class="item-line">
-            <ion-col col-3>
-              <ion-avatar item-start>
-                <img
-                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
-                />
-              </ion-avatar>
-            </ion-col>
-            <ion-col col-6>
-              <h2>
-                Alameda Santos, <br />
-                1340
-              </h2></ion-col
-            >
-            <ion-col col-3>
-              <p style="font-weight: bold;">R$ 7,98</p>
-              <small>Recompensa</small>
-            </ion-col>
-          </ion-row>
-        </ion-item>
-      </ion-card>
-
-      <ion-card>
-        <ion-item>
-          <ion-row class="item-line">
-            <ion-col col-3>
-              <ion-avatar item-start>
-                <img
-                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
-                />
-              </ion-avatar>
-            </ion-col>
-            <ion-col col-6>
-              <h2>
-                Alameda Santos, <br />
-                1340
-              </h2></ion-col
-            >
-            <ion-col col-3>
-              <p style="font-weight: bold;">R$ 7,98</p>
+              <h2 style="font-weight: bold;">R$ 7,98</h2>
               <small>Recompensa</small>
             </ion-col>
           </ion-row>
