--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,22 +1,51 @@
 <ion-header>
-
   <ion-navbar>
-    <ion-title>{{ 'SEARCH_TITLE' | translate }}</ion-title>
+    <ion-title>{{ "SEARCH_TITLE" | translate }}</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content>
-  <ion-searchbar (ionInput)="getItems($event)" placeholder="{{ 'SEARCH_PLACEHOLDER' | translate }}"></ion-searchbar>
-  <ion-list>
-    <button ion-item (click)="openItem(item)" *ngFor="let item of currentItems">
-      <ion-avatar item-start>
-        <img [src]="item.profilePic" />
-      </ion-avatar>
-      <h2>{{item.name}}</h2>
-      <p>{{item.about}}</p>
-      <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
-    </button>
-  </ion-list>
+  <!--
+    <ion-searchbar (ionInput)="getItems($event)" placeholder="{{ 'SEARCH_PLACEHOLDER' | translate }}"></ion-searchbar>
+  -->
+  <!--
+    <ion-list>
+      <button ion-item (click)="openItem(item)" *ngFor="let item of currentItems">
+        <ion-avatar item-start>
+          <img [src]="item.profilePic" />
+        </ion-avatar>
+        <h2>{{item.name}}</h2>
+        <p>{{item.about}}</p>
+        <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
+      </button>
+    </ion-list>
+  -->
+
+  <ion-item>
+    <h2 style="margin-left: 10px; color: orange;">Entregas Disponiveis</h2>
+  </ion-item>
+  <ion-item>
+    <ion-list>
+      <ion-card style=" background-color: lightgray" (click)="detailsPackage()">
+        <ion-item>
+          <ion-row class="item-line">
+            <ion-col col-3>
+              <ion-avatar item-start>
+                <img
+                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
+                />
+              </ion-avatar>
+            </ion-col>
+            <ion-col col-6>
+              <h2>Av. Paulista, 1340</h2>
+              <small>40 minutos</small>
+            </ion-col>
+            <ion-col col-3>
+              <h2 style="font-weight: bold;">R$ 7,98</h2>
+            </ion-col>
+          </ion-row>
+        </ion-item>
+      </ion-card>
+    </ion-list>
+  </ion-item>
 </ion-content>
