--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -1,18 +1,12 @@
 <ion-header>
   <ion-navbar>
-    <ion-row style="display: flex; align-items: center;">
-      <ion-col col-5>
-        <ion-title>{{ "PRODUCTS" | translate }}</ion-title>
-      </ion-col>
-      <ion-col></ion-col>
-      <ion-col col-2>
+    <ion-row style="display: flex; align-items: center;margin: 0px 10px;">
+        <ion-title>LoggiBox</ion-title>
         <img
-          src="https://cdn6.aptoide.com/imgs/d/e/8/de829fcf2477b3c7001d7a64ca9a8924_icon.png?w=256"
+          src="../../assets/img/logo4.png"
           alt=""
-          height="30"
-          width="30"
+          width="50"
         />
-      </ion-col>
     </ion-row>
 
     <!-- <ion-title>{{ "LIST_MASTER_TITLE" | translate }}</ion-title> -->
