--- a/src/pages/product-details/product-details.html
+++ b/src/pages/product-details/product-details.html
@@ -5,7 +5,15 @@
   Ionic pages and navigation.
 -->
 <ion-header color="primary">
-  <ion-navbar> <ion-title>Maps</ion-title> </ion-navbar>
+  <ion-navbar> 
+    <ion-row style="display: flex; align-items: center;margin: 0px 10px;">
+    <ion-title>LoggiBox</ion-title>
+    <img
+      src="../../assets/img/logo4.png"
+      alt=""
+      width="50"
+    />
+</ion-row> </ion-navbar>
 </ion-header>
 
 <ion-content> <div #map id="map"></div> </ion-content>
