--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,6 +1,13 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>{{ "SEARCH_TITLE" | translate }}</ion-title>
+    <ion-row style="display: flex; align-items: center;margin: 0px 10px;">
+      <ion-title>LoggiBox</ion-title>
+      <img
+        src="../../assets/img/logo4.png"
+        alt=""
+        width="50"
+      />
+  </ion-row>
   </ion-navbar>
 </ion-header>
 
