--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -24,9 +24,9 @@
 
 <ion-content>
   <ion-item>
-    <h2 style="margin-left: 10px; color: orange;">Lista de Entregas</h2>
+    <h2  class="sub-title">Lista de Entregas</h2>
   </ion-item>
-  <ion-item class="list" style="background-color: #00BAFF;">
+  <ion-item class="list">
     <ion-list>
       <ion-card>
         <ion-item>
@@ -46,7 +46,6 @@
             >
             <ion-col col-3>
               <h2 style="font-weight: bold;">R$ 7,98</h2>
-              <small>Recompensa</small>
             </ion-col>
           </ion-row>
         </ion-item>
