--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,18 +1,9 @@
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>{{ 'LOGIN_TITLE' | translate }}</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content>
+<ion-content style="background: #448FFB;">
   <form (submit)="doLogin()">
-    <ion-list>
-
+    <ion-list class="myLogin">
+        <img style="margin: auto; padding-left: 15%;" src="../../assets/img/logo4.png" />
       <ion-item>
-        <ion-label fixed>{{ 'EMAIL' | translate }}</ion-label>
+        <ion-label floating>{{ 'EMAIL' | translate }}</ion-label>
         <ion-input type="email" [(ngModel)]="account.email" name="email"></ion-input>
       </ion-item>
 
@@ -26,12 +17,12 @@
       -->
 
       <ion-item>
-        <ion-label fixed>{{ 'PASSWORD' | translate }}</ion-label>
+        <ion-label floating>{{ 'PASSWORD' | translate }}</ion-label>
         <ion-input type="password" [(ngModel)]="account.password" name="password"></ion-input>
       </ion-item>
 
       <div padding>
-        <button ion-button color="primary" block>{{ 'LOGIN_BUTTON' | translate }}</button>
+        <button class="loginBtn" ion-button color="primary" block>Logar</button>
       </div>
 
     </ion-list>
