--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -29,7 +29,7 @@
   -->
 
   <ion-item>
-    <h2 style="margin-left: 10px; color: orange;">Entregas Disponiveis</h2>
+    <h2 class="sub-title">Entregas Disponiveis</h2>
   </ion-item>
   <ion-item>
     <ion-list>
