--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,13 +1,22 @@
-<ion-content scroll="false">
-  <div class="splash-bg"></div>
-  <div class="splash-info">
-    <div class="splash-logo"></div>
-    <div class="splash-intro">
-      {{ 'WELCOME_INTRO' | translate }}
-    </div>
-  </div>
-  <div padding>
-    <button ion-button block (click)="signup()">{{ 'SIGNUP' | translate }}</button>
-    <button ion-button block (click)="login()" class="login">{{ 'LOGIN' | translate }}</button>
-  </div>
+<ion-content style="background: #448FFB;">
+    <ion-list class="myLogin">
+        <img style="margin: auto; padding-left: 15%;" src="../../assets/img/logo4.png" />
+      
+
+      <!--
+      Want to use a Username instead of an Email? Here you go:
+
+      <ion-item>
+        <ion-label floating>{{ 'USERNAME' | translate }}</ion-label>
+        <ion-input type="text" [(ngModel)]="account.username" name="username"></ion-input>
+      </ion-item>
+      -->
+
+      <div padding style="padding-top: 40px;">
+          <button ion-button block (click)="signup()">Cadastrar</button>
+          <button ion-button block (click)="login()" class="login">Logar</button>
+        </div>
+
+    </ion-list>
+
 </ion-content>
