--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -1,12 +1,8 @@
 <ion-header>
   <ion-navbar>
     <ion-row style="display: flex; align-items: center;margin: 0px 10px;">
-        <ion-title>LoggiBox</ion-title>
-        <img
-          src="../../assets/img/logo4.png"
-          alt=""
-          width="50"
-        />
+      <ion-title>LoggiBox</ion-title>
+      <img src="../../assets/img/logo4.png" alt="" width="50" />
     </ion-row>
 
     <!-- <ion-title>{{ "LIST_MASTER_TITLE" | translate }}</ion-title> -->
@@ -23,12 +19,10 @@
 </ion-header>
 
 <ion-content>
-  <ion-item>
-    <h2  class="sub-title">Lista de Entregas</h2>
-  </ion-item>
+  <ion-item> <h2 class="sub-title">Lista de Entregas</h2> </ion-item>
   <ion-item class="list">
     <ion-list>
-      <ion-card>
+      <ion-card *ngFor="let package of packages">
         <ion-item>
           <ion-row class="item-line">
             <ion-col col-3>
@@ -39,13 +33,10 @@
               </ion-avatar>
             </ion-col>
             <ion-col col-6>
-              <h2>
-                Alameda Santos, <br />
-                1340
-              </h2></ion-col
+              <h2>{{ package.delivery_address }}</h2></ion-col
             >
             <ion-col col-3>
-              <h2 style="font-weight: bold;">R$ 7,98</h2>
+              <h2 style="font-weight: bold;">R$ {{ package.weight }}</h2>
             </ion-col>
           </ion-row>
         </ion-item>
