--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -37,7 +37,7 @@
             <ion-col col-2>
               <ion-avatar item-start>
                 <img
-                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
+                  src="../../assets/img/package.png"
                 />
               </ion-avatar>
             </ion-col>
