--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -28,7 +28,7 @@
             <ion-col col-3>
               <ion-avatar item-start>
                 <img
-                  src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-3/256/Package-Accept-icon.png"
+                  src="../../assets/img/package.png"
                 />
               </ion-avatar>
             </ion-col>
