--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -31,8 +31,8 @@
 
      <ion-row style="display: inline-flex;">
           <ion-label floating>Tire uma foto*</ion-label>
-        <ion-fab>
-            <button ion-fab class="" (click)="takePicture()"><ion-icon name="ios-camera"></ion-icon></button>
+        <ion-fab (click)="takePicture()">
+            <button ion-fab class="" ><ion-icon name="ios-camera"></ion-icon></button>
           </ion-fab>
         </ion-row>
       <br><br><br><br>
