--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -4,76 +4,33 @@
       <ion-title>LoggiBox</ion-title>
       <img src="../../assets/img/logo4.png" alt="" width="50" />
     </ion-row>
-
-    <!-- <ion-title>{{ "LIST_MASTER_TITLE" | translate }}</ion-title> -->
-
-    <!-- <ion-buttons end> -->
-    <!--
-      <button ion-button icon-only (click)="addItem()">
-        <ion-icon name="add"></ion-icon>
-      </button>
-    -->
-
-    <!-- </ion-buttons> -->
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-item> <h2 class="sub-title">Lista de Entregas</h2> </ion-item>
-  <ion-item class="list">
-    <ion-list>
-      <ion-card *ngFor="let package of packages">
-        <ion-item>
-          <ion-row class="item-line">
-            <ion-col col-3>
-              <ion-avatar item-start>
-                <img
-                  src="../../assets/img/package.png"
-                />
-              </ion-avatar>
-            </ion-col>
-            <ion-col col-6>
-              <h2>{{ package.delivery_address }}</h2></ion-col
-            >
-            <ion-col col-3>
-              <h2 style="font-weight: bold;">R$ {{ package.weight }}</h2>
-            </ion-col>
-          </ion-row>
-        </ion-item>
-      </ion-card>
-    </ion-list>
-  </ion-item>
+  <ion-item> <h2 class="sub-title">Entregas Realizadas</h2> </ion-item>
 
-  <!--
-    <ion-row>
-      <ion-col [size]="2">
-        <ion-img src="/assets/myImg.png"></ion-img>
-      </ion-col>
-      <ion-card-header>
-        <ion-card-title>Hello World</ion-card-title>
-      </ion-card-header>
-      <ion-card-content> <p>The content for this card</p> </ion-card-content>
-    </ion-row>
-  -->
-
-  <!--
-    <ion-list>
-      <ion-item-sliding *ngFor="let item of currentItems">
-        <button ion-item (click)="openItem(item)">
-          <ion-avatar item-start>
-            <img [src]="item.profilePic" />
-          </ion-avatar>
-          <h2>{{item.name}}</h2>
-          <p>{{item.about}}</p>
-          <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
-        </button>
-
-        <ion-item-options>
-          <button ion-button color="danger" (click)="deleteItem(item)">
-            {{ 'DELETE_BUTTON' | translate }}
-          </button>
-        </ion-item-options>
-      </ion-item-sliding>
-    </ion-list>
-  -->
+  <ion-card *ngFor="let package of packages">
+    <ion-card-content>
+      <ion-row>
+        <ion-col col-9>
+          <p>Data: 16/03/18</p>
+          <p>{{ package.delivery_address }}</p>
+          <p style="display: flex;">
+            <img
+              src="../../assets/img/weight.png"
+              alt=""
+              height="25"
+              width="25 !important"
+            />
+            <small>{{ package.weight }}</small>
+          </p>
+        </ion-col>
+        <ion-col col-3>
+          <small>Recebido</small>
+          <h1><strong> 12,13</strong></h1>
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
