--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,62 +1,61 @@
 <ion-header>
-
   <ion-navbar>
-      <ion-row style="display: flex; align-items: center;margin: 0px 10px;">
-          <ion-title>LoggiBox</ion-title>
-          <img src="../../assets/img/logo4.png" alt="" width="50" />
-        </ion-row>
+    <ion-row style="display: flex; align-items: center;margin: 0px 10px;">
+      <ion-title>LoggiBox</ion-title>
+      <img src="../../assets/img/logo4.png" alt="" width="50" />
+    </ion-row>
   </ion-navbar>
-
 </ion-header>
 
 <ion-content>
-    <!--
-      <ion-searchbar (ionInput)="getItems($event)" placeholder="{{ 'SEARCH_PLACEHOLDER' | translate }}"></ion-searchbar>
-    -->
-    <!--
-      <ion-list>
-        <button ion-item (click)="openItem(item)" *ngFor="let item of currentItems">
-          <ion-avatar item-start>
-            <img [src]="item.profilePic" />
-          </ion-avatar>
-          <h2>{{item.name}}</h2>
-          <p>{{item.about}}</p>
-          <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
-        </button>
-      </ion-list>
-    -->
-  
-    <ion-item> <h2 class="sub-title">Entregas Disponiveis</h2> </ion-item>
-    <ion-item>
-      <ion-list>
-        <ion-card
-          *ngFor="let availablePackage of availablePackages"
-          style=" background-color: lightgray"
-        >
-          <ion-item>
-            <ion-row class="item-line">
-              <ion-col col-2>
-                <ion-avatar item-start>
-                  <img
-                    src="../../assets/img/package.png"
-                  />
-                </ion-avatar>
-              </ion-col>
-              <ion-col col-10>
-                <ion-row>
-                  <h2>{{ availablePackage.delivery_address }}</h2>
-                </ion-row>
-                <ion-row>
-                  <ion-col col-9> <small>40 minutos</small> </ion-col>
-                  <ion-col col-3>
-                    <small>R$ {{ availablePackage.weight }} </small>
-                  </ion-col>
-                  <button (click)="patch(availablePackage.id)">Entregue</button>
-                </ion-row>
-              </ion-col>
-            </ion-row>
-          </ion-item>
-        </ion-card>
-      </ion-list>
-    </ion-item>
-  </ion-content>
+  <!--
+    <ion-searchbar (ionInput)="getItems($event)" placeholder="{{ 'SEARCH_PLACEHOLDER' | translate }}"></ion-searchbar>
+  -->
+  <!--
+    <ion-list>
+      <button ion-item (click)="openItem(item)" *ngFor="let item of currentItems">
+        <ion-avatar item-start>
+          <img [src]="item.profilePic" />
+        </ion-avatar>
+        <h2>{{item.name}}</h2>
+        <p>{{item.about}}</p>
+        <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
+      </button>
+    </ion-list>
+  -->
+
+  <ion-item> <h2 class="sub-title">Entregas Disponiveis</h2> </ion-item>
+  <ion-item>
+    <ion-list>
+      <ion-card
+        *ngFor="let availablePackage of availablePackages"
+        style=" background-color: lightgray"
+      >
+        <ion-item>
+          <ion-row class="item-line">
+            <ion-col col-12>
+              <ion-row>
+                <h2>{{ availablePackage.delivery_address }}</h2>
+              </ion-row>
+              <ion-row>
+                <ion-col col-9> <small>40 minutos</small> </ion-col>
+                <ion-col col-3>
+                  <small>R$ {{ availablePackage.weight }} </small>
+                </ion-col>
+                <button
+                  (click)="patch(availablePackage.id)"
+                  ion-button
+                  small
+                  color="secondary"
+                  style="float: right !important;"
+                >
+                  Entregue
+                </button>
+              </ion-row>
+            </ion-col>
+          </ion-row>
+        </ion-item>
+      </ion-card>
+    </ion-list>
+  </ion-item>
+</ion-content>
