--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -8,7 +8,9 @@
 </ion-header>
 
 <ion-content>
-  <ion-item> <h2 class="sub-title">Entregas Realizadas</h2> </ion-item>
+  <ion-item>
+    <h2 class="sub-title" (click)="ionViewDidLoad()">Entregas Realizadas</h2>
+  </ion-item>
 
   <ion-card *ngFor="let package of packages">
     <ion-card-content>
